k8s-kafka-mongo-hoursofoper.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ServiceName
  labels:
    app: ServiceName
    deployon: "dsr"
spec:
  replicas: replace_replicas
  selector:
    matchLabels:
      app: ServiceName
  template:
    metadata:
      labels:
        app: ServiceName
        deployon: "dsr"
        nwpolicy: kafka-mongo-hoursofoper
    spec:
      affinity:
        podAntiAffinity:  
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - ServiceName
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: ServiceName
        image: image_to_be_deployed
        imagePullPolicy: Always
        ports:
        - containerPort: 7069
        resources:
          requests:
            memory: 500Mi
            cpu: "0.5"
          limits:
            memory: 500Mi
            cpu: "0.5"
---
apiVersion: v1
kind: Service
metadata:
  name: SvcName
  labels:
    app: ServiceName
    k8s-app: kafka-mongo-hoursofoper
spec:
  selector:
    app: ServiceName
  type: ClusterIP
  ports:
  - port: 7069
    name: web
    targetPort: 7069
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: kafka-mongo-hoursofoper
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      nwpolicy: kafka-mongo-hoursofoper
  ingress:
  - from:
    - podSelector:
        matchLabels:
          nwpolicy: apigateway-access
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
---
